# bitcoind-startos

./: .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  SHA256SUMS.asc.patch  check-rpc.sh  check-synced.sh  config.sh  config_spec.yaml  docker_entrypoint.sh  instructions.md  manifest.yaml  migration-v22.sh  package-lock.json  package.json
.github/workflows/: build.yml  buildService.yml  releaseService.yml
Old/: .gitignore
Old/actions/: reindex.sh
Old/manager/: .gitignore  Cargo.toml
Old/scripts/: dependencies.ts  embassy.ts
actions/: reindex.sh  reindex_chainstate.sh
assets/: bitcoin.conf.template
assets/compat/: bitcoin.conf.template  config-set.sh  config_rules.yaml  config_spec.yaml
assets/rpcauth/: rpcauthwithpass.sh
assets/utils/: check-synced.sh
docs/: blockchain-migration.md  instructions.md  wallet-integrations.md  wallets.md
docs/integrations/: specter.rst
docs/wallet-integrations/: bitboxapp.md  blockstream-green.md  blue-wallet.md  electrum.md  fully-noded.md  nunchuck.md  sparrow.md  specter.md  trezor-suite.md
manager/: Cargo.toml
manager/src/: main.rs
migrations/: eq_22_0_0.sh  eq_23_0_0_lt_24_0_0.sh  eq_24_0_0_lt_25_0_0.sh  gt_22_0_0_lt_23_0_0.sh  lt_22_0_0.sh  lt_23_0_0.sh
scripts/: bundle.ts  dependencies.ts  deps.ts  embassy.js  embassy.ts  test.ts  types.d.ts
scripts/models/: lazy.ts  setConfig.ts
scripts/procedures/: getConfig.ts  health.ts  main.ts  setConfig.ts
scripts/services/: action.ts  dependencies.ts  getAlias.ts  getConfig.ts  migrations.ts  properties.ts  setConfig.ts
startos/: backups.ts  index.ts  init.ts  interfaces.ts  main.ts  manifest.ts  properties.ts  sdk.ts  store.ts  utils.ts
startos/actions/: assumeutxo.ts  credentials.ts  deleteCoinstatsIndex.ts  deletePeers.ts  deleteRpcAuth.ts  deleteTxIndex.ts  generateRpcAuth.ts  generateRpcUserDependent.ts  index.ts  reindexBlockchain.ts  reindexChainstate.ts  runtime-info.ts  runtimeInfo.ts
startos/config/: index.ts  read.ts  save.ts  spec.ts
startos/dependencies/: dependencies.ts
startos/file-models/: bitcoin.conf.ts  rpc-proxy.toml.ts  store.json.ts
startos/fileModels/: bitcoin.conf.ts  config.toml.ts  (+1 more)
(+44 files in other folders)
