[package]
name = "bitcoind-manager"
version = "0.1.1"
authors = ["Aiden McClelland <aiden@start9labs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btc-rpc-proxy = { git = "https://github.com/Start9Labs/btc-rpc-proxy.git", branch = "skinny" }
chrono = "0.4.19"
ctrlc = { version = "3.1.7", features = ["termination"] }
heck = "0.3.3"
lazy_static = "1.4.0"
linear-map = { version = "*", features = ["serde_impl"] }
nix = "0.26.2"
regex = "1.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.15"
serde_json = "1.0"
tiny-tmpl = "0.1.3"
tokio = { version = "1", features = ["rt"] }
env_logger = "0.10.0"
