[package]
name = "bitcoind-manager"
version = "0.1.1"
authors = ["Aiden McClelland <aiden@start9labs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btc-rpc-proxy = { git = "https://github.com/Start9Labs/btc-rpc-proxy.git", branch = "skinny" }
chrono = "0.4.31"
ctrlc = { version = "3.4.1", features = ["termination"] }
heck = "0.3.3"
lazy_static = "1.4.0"
linear-map = { version = "*", features = ["serde_impl"] }
nix = { version = "0.27.1", features = ["process", "signal"] }
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.8.17"
serde_json = "1.0"
tiny-tmpl = "0.1.3"
tokio = { version = "1", features = ["rt"] }
env_logger = "0.10.0"
eyre = "0.6.12"
